--- a/concurrency/asyncio_tute/doco/coro_and_tasks.ipynb
+++ b/concurrency/asyncio_tute/doco/coro_and_tasks.ipynb
@@ -34,11 +34,11 @@
     }
    ],
    "source": [
-    "\n",
     "async def main():\n",
     "    print(\"hello\")\n",
     "    await asyncio.sleep(1)\n",
     "    print(\"world\")\n",
+    "\n",
     "\n",
     "await main()"
    ]
@@ -80,9 +80,10 @@
     "\n",
     "async def main():\n",
     "    print(f\"started at {time.strftime('%X')}\")\n",
-    "    await say_after(1, \"hello\") # non-concurrent\n",
+    "    await say_after(1, \"hello\")  # non-concurrent\n",
     "    await say_after(2, \"world\")\n",
     "    print(f\"finished at {time.strftime('%X')}\")\n",
+    "\n",
     "\n",
     "# asyncio.run(main())\n",
     "await main()"
@@ -117,6 +118,7 @@
     "    await task2\n",
     "    print(f\"finished at {time.strftime('%X')}\")\n",
     "\n",
+    "\n",
     "await main()"
    ]
   },
@@ -146,10 +148,12 @@
     "async def nested():\n",
     "    return 42\n",
     "\n",
+    "\n",
     "async def main():\n",
     "    print(await nested())\n",
     "\n",
-    "await main()\n"
+    "\n",
+    "await main()"
    ]
   },
   {
@@ -170,10 +174,12 @@
     "async def nested():\n",
     "    return 42\n",
     "\n",
+    "\n",
     "async def main():\n",
     "    task = asyncio.create_task(nested())\n",
     "    res = await task\n",
     "    print(res)\n",
+    "\n",
     "\n",
     "await main()"
    ]
@@ -238,7 +244,8 @@
     "    for task in background_tasks:\n",
     "        await task\n",
     "\n",
-    "await main()\n"
+    "\n",
+    "await main()"
    ]
   },
   {
@@ -279,11 +286,10 @@
     "        print(datetime.datetime.now())\n",
     "        if (loop.time() + 1.0) >= end_time:\n",
     "            break\n",
-    "        await asyncio.sleep(1) # block/pause curr coro, give back control\n",
+    "        await asyncio.sleep(1)  # block/pause curr coro, give back control\n",
     "\n",
     "\n",
-    "await display_date()\n",
-    "\n"
+    "await display_date()"
    ]
   },
   {
@@ -318,7 +324,6 @@
     }
    ],
    "source": [
-    "\n",
     "async def factorial(name, number):\n",
     "    f = 1\n",
     "    for i in range(2, number + 1):\n",
@@ -339,8 +344,7 @@
     "    print(L)\n",
     "\n",
     "\n",
-    "await main()\n",
-    "\n"
+    "await main()"
    ]
   },
   {
@@ -369,14 +373,16 @@
     "async def eternity():\n",
     "    # Sleep for one hour\n",
     "    await asyncio.sleep(3600)\n",
-    "    print('yay!')\n",
+    "    print(\"yay!\")\n",
+    "\n",
     "\n",
     "async def main():\n",
     "    # Wait for at most 1 second\n",
     "    try:\n",
-    "        await asyncio.wait_for(eternity(), timeout=1.0) # auto schedule coro as task\n",
+    "        await asyncio.wait_for(eternity(), timeout=1.0)  # auto schedule coro as task\n",
     "    except asyncio.TimeoutError:\n",
-    "        print('timeout!')\n",
+    "        print(\"timeout!\")\n",
+    "\n",
     "\n",
     "await main()"
    ]
@@ -416,14 +422,18 @@
     "    time.sleep(1)\n",
     "    print(f\"blocking_io complete at {time.strftime('%X')}\")\n",
     "\n",
+    "\n",
     "async def main():\n",
     "    print(f\"started main at {time.strftime('%X')}\")\n",
     "\n",
     "    await asyncio.gather(\n",
-    "        asyncio.to_thread(blocking_io), # return coro, which is auto scheduled as task by gather\n",
+    "        asyncio.to_thread(\n",
+    "            blocking_io\n",
+    "        ),  # return coro, which is auto scheduled as task by gather\n",
     "        asyncio.to_thread(blocking_io),\n",
     "        asyncio.to_thread(blocking_io),\n",
-    "        asyncio.sleep(1))\n",
+    "        asyncio.sleep(1),\n",
+    "    )\n",
     "\n",
     "    print(f\"finished main at {time.strftime('%X')}\")\n",
     "\n",
@@ -457,7 +467,6 @@
     }
    ],
    "source": [
-    "\n",
     "async def cancel_me():\n",
     "    print(\"cancel_me(): before sleep\")\n",
     "\n",
@@ -485,7 +494,7 @@
     "        print(\"main(): cancel_me is cancelled now\")\n",
     "\n",
     "\n",
-    "await main()\n"
+    "await main()"
    ]
   },
   {
