--- a/data/analysis/23_histogram.ipynb
+++ b/data/analysis/23_histogram.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -134,9 +133,9 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(12, 6))\n",
-    "dat.plot(kind='box', vert=False, ax=ax)\n",
+    "dat.plot(kind=\"box\", vert=False, ax=ax)\n",
     "for n in fivnum:\n",
-    "    ax.axvline(n, color='red', linestyle='--', alpha=0.5)"
+    "    ax.axvline(n, color=\"red\", linestyle=\"--\", alpha=0.5)"
    ]
   },
   {
@@ -193,38 +192,32 @@
     "\n",
     "# even width\n",
     "pct_histogram_from_pct_edges(\n",
-    "    df = hist,\n",
-    "    ff = ff,\n",
-    "    col = col,\n",
-    "    edges = np.histogram_bin_edges(hist.loc[ff,col], bins=10),\n",
-    "    ax = axs[0][0]\n",
+    "    df=hist,\n",
+    "    ff=ff,\n",
+    "    col=col,\n",
+    "    edges=np.histogram_bin_edges(hist.loc[ff, col], bins=10),\n",
+    "    ax=axs[0][0],\n",
     ")\n",
     "\n",
     "# even width 2\n",
     "pct_histogram_from_pct_edges(\n",
-    "    df = hist,\n",
-    "    ff= ff,\n",
-    "    col = col,\n",
-    "    edges = np.linspace(-0.5, 0.5, 11),\n",
-    "    ax = axs[0][1]\n",
+    "    df=hist, ff=ff, col=col, edges=np.linspace(-0.5, 0.5, 11), ax=axs[0][1]\n",
     ")\n",
     "\n",
     "# by proportion\n",
     "pct_histogram_from_pct_edges(\n",
-    "    df = hist,\n",
-    "    ff= ff,\n",
-    "    col = col,\n",
-    "    edges = hist.loc[ff,col].quantile([0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1]).to_list(),\n",
-    "    ax = axs[1][0]\n",
+    "    df=hist,\n",
+    "    ff=ff,\n",
+    "    col=col,\n",
+    "    edges=hist.loc[ff, col]\n",
+    "    .quantile([0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1])\n",
+    "    .to_list(),\n",
+    "    ax=axs[1][0],\n",
     ")\n",
     "\n",
     "# defined\n",
     "pct_histogram_from_pct_edges(\n",
-    "    df = hist,\n",
-    "    ff= ff,\n",
-    "    col = col,\n",
-    "    edges = [-np.inf, -0.0, 0.05, 0.15, np.inf],\n",
-    "    ax = axs[1][1]\n",
+    "    df=hist, ff=ff, col=col, edges=[-np.inf, -0.0, 0.05, 0.15, np.inf], ax=axs[1][1]\n",
     ")\n",
     "\n",
     "plt.tight_layout()\n",
