--- a/data/analysis/90_excel_writer.ipynb
+++ b/data/analysis/90_excel_writer.ipynb
@@ -17,7 +17,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pylibs.excel_writer import ExcelWriter, read_excel_img, read_excel_df, read_excel_text"
+    "from pylibs.excel_writer import (\n",
+    "    ExcelWriter,\n",
+    "    read_excel_img,\n",
+    "    read_excel_df,\n",
+    "    read_excel_text,\n",
+    ")"
    ]
   },
   {
@@ -39,6 +44,7 @@
    "source": [
     "from loguru import logger\n",
     "import sys\n",
+    "\n",
     "logger.add(sys.stdout)"
    ]
   },
@@ -187,14 +193,14 @@
    ],
    "source": [
     "tbl = (\n",
-    "    df.groupby([\"who\"], dropna=False, observed=False,as_index=False)\n",
+    "    df.groupby([\"who\"], dropna=False, observed=False, as_index=False)\n",
     "    .agg(\n",
     "        **{\n",
     "            \"n\": (\"who\", \"size\"),\n",
     "            \"survival_rate\": (\"survived\", \"mean\"),\n",
     "        }\n",
     "    )\n",
-    "    .round({'survival_rate':2})\n",
+    "    .round({\"survival_rate\": 2})\n",
     ")\n",
     "tbl"
    ]
@@ -279,17 +285,24 @@
    ],
    "source": [
     "tbl_styled = (\n",
-    "    tbl.style\n",
-    "    .set_properties(**{ # background and border\n",
-    "        'background-color': 'lightyellow',\n",
-    "        'color': 'darkblue',\n",
-    "        'border-style': 'hair',\n",
-    "        'border-color': 'black',\n",
-    "    })\n",
-    "    .map(lambda x: 'color:red;' if x < 0.5 else None, subset=['survival_rate']) # color < 0.5\n",
-    "    .map_index(lambda v: 'background-color: lightblue;color:black;', axis=0) # Highlight column index\n",
-    "    .map_index(lambda v: 'background-color: green;color:black;', axis=1) # Highlight row\n",
-    "    .highlight_max(axis=0, subset=['n']) # Highlight max in column 'n'\n",
+    "    tbl.style.set_properties(\n",
+    "        **{  # background and border\n",
+    "            \"background-color\": \"lightyellow\",\n",
+    "            \"color\": \"darkblue\",\n",
+    "            \"border-style\": \"hair\",\n",
+    "            \"border-color\": \"black\",\n",
+    "        }\n",
+    "    )\n",
+    "    .map(\n",
+    "        lambda x: \"color:red;\" if x < 0.5 else None, subset=[\"survival_rate\"]\n",
+    "    )  # color < 0.5\n",
+    "    .map_index(\n",
+    "        lambda v: \"background-color: lightblue;color:black;\", axis=0\n",
+    "    )  # Highlight column index\n",
+    "    .map_index(\n",
+    "        lambda v: \"background-color: green;color:black;\", axis=1\n",
+    "    )  # Highlight row\n",
+    "    .highlight_max(axis=0, subset=[\"n\"])  # Highlight max in column 'n'\n",
     ")\n",
     "tbl_styled"
    ]
@@ -319,9 +332,16 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1, 1)\n",
-    "df.plot(kind=\"hist\", y=\"age\", bins=20, edgecolor=\"black\", ax=ax, title=\"Age Distribution of Titanic Passengers\")\n",
+    "df.plot(\n",
+    "    kind=\"hist\",\n",
+    "    y=\"age\",\n",
+    "    bins=20,\n",
+    "    edgecolor=\"black\",\n",
+    "    ax=ax,\n",
+    "    title=\"Age Distribution of Titanic Passengers\",\n",
+    ")\n",
     "\n",
-    "print(f\"{fig.get_size_inches() = }\") \n",
+    "print(f\"{fig.get_size_inches() = }\")\n",
     "fig.savefig(\"input/age_dist.png\")"
    ]
   },
@@ -455,7 +475,12 @@
     }
    ],
    "source": [
-    "rdf = read_excel_df(file_path=Path(\"input\") / \"xl_input1.xlsx\", sheet_name='Part 3', range_ref=\"P2:S5\", index_col=0)\n",
+    "rdf = read_excel_df(\n",
+    "    file_path=Path(\"input\") / \"xl_input1.xlsx\",\n",
+    "    sheet_name=\"Part 3\",\n",
+    "    range_ref=\"P2:S5\",\n",
+    "    index_col=0,\n",
+    ")\n",
     "rdf"
    ]
   },
@@ -484,7 +509,9 @@
     }
    ],
    "source": [
-    "img = read_excel_img(file_path=Path(\"input\") / \"xl_input1.xlsx\", sheet_name='Part 3', anchor_cell='B8')\n",
+    "img = read_excel_img(\n",
+    "    file_path=Path(\"input\") / \"xl_input1.xlsx\", sheet_name=\"Part 3\", anchor_cell=\"B8\"\n",
+    ")\n",
     "img"
    ]
   },
@@ -505,7 +532,9 @@
     }
    ],
    "source": [
-    "text = read_excel_text(file_path=Path(\"input\") / \"xl_input1.xlsx\", sheet_name='Part 3', range_ref=\"B38:B42\")\n",
+    "text = read_excel_text(\n",
+    "    file_path=Path(\"input\") / \"xl_input1.xlsx\", sheet_name=\"Part 3\", range_ref=\"B38:B42\"\n",
+    ")\n",
     "print(text)"
    ]
   },
@@ -587,7 +616,9 @@
     "ew = ExcelWriter(file_path=Path(\"output/test.xlsx\"))\n",
     "\n",
     "ew.write_df(tbl, title=\"Table 1: DataFrame\")\n",
-    "ew.write_df(tbl_styled, title=\"Table 2: Styled DataFrame\", location=\"right\") # can write to the right of previous item\n",
+    "ew.write_df(\n",
+    "    tbl_styled, title=\"Table 2: Styled DataFrame\", location=\"right\"\n",
+    ")  # can write to the right of previous item\n",
     "\n",
     "ew.write_fig(\n",
     "    fig,\n",
@@ -597,14 +628,12 @@
     "# images\n",
     "from openpyxl.drawing import image as openpyxl_image\n",
     "import io\n",
+    "\n",
     "with open(\"input/age_dist.png\", \"rb\") as f:\n",
     "    img = openpyxl_image.Image(io.BytesIO(f.read()))\n",
-    "    ew.write_fig(\n",
-    "        img,\n",
-    "        title=\"Figure 2: Bar Plot\",\n",
-    "        location='right'\n",
-    "    )\n",
+    "    ew.write_fig(img, title=\"Figure 2: Bar Plot\", location=\"right\")\n",
     "import PIL.Image as PILImage\n",
+    "\n",
     "img = PILImage.open(\"input/age_dist.png\")\n",
     "ew.write_fig(\n",
     "    img,\n",
@@ -613,13 +642,16 @@
     "\n",
     "ew.auto_fit_column_width()\n",
     "\n",
-    "ew.write_text(f\"\"\"\n",
+    "ew.write_text(\n",
+    "    f\"\"\"\n",
     "line 1\n",
     "line 2\n",
     "line 3\n",
-    "\"\"\", 'text')\n",
-    "ew.write_text(\"single line\", location='right')\n",
-    "ew.write_text(\"single line 2 down\")\n"
+    "\"\"\",\n",
+    "    \"text\",\n",
+    ")\n",
+    "ew.write_text(\"single line\", location=\"right\")\n",
+    "ew.write_text(\"single line 2 down\")"
    ]
   },
   {
@@ -678,8 +710,7 @@
     "# switch to new sheet and write items\n",
     "# also showing how method calls can be chained together for simplicity\n",
     "(\n",
-    "    ew\n",
-    "    .switch_to_sheet(\"Part 2\", create_if_not_exists=True)\n",
+    "    ew.switch_to_sheet(\"Part 2\", create_if_not_exists=True)\n",
     "    .write_df(tbl, title=\"Table 3: DataFrame\")\n",
     "    .write(img, title=\"Figure 4: Bar Plot\", scaler=0.9)\n",
     "    .write(tbl_styled, title=\"Table 4: Styled DataFrame\")\n",
@@ -713,8 +744,7 @@
     "# use with block to write items faster in one go, as part of the same obj which had w mode\n",
     "with ew:\n",
     "    (\n",
-    "        ew\n",
-    "        .switch_to_sheet(\"Part 3\", create_if_not_exists=True)\n",
+    "        ew.switch_to_sheet(\"Part 3\", create_if_not_exists=True)\n",
     "        .write_df(tbl, title=\"Table 1: DataFrame\")\n",
     "        .write_df(tbl_styled, title=\"Table 2: Styled DataFrame\", location=\"right\")\n",
     "        .write_fig(\n",
@@ -758,15 +788,13 @@
     "# use with block to write items faster in one go\n",
     "with ExcelWriter(file_path=Path(\"output/test2.xlsx\")) as ew:\n",
     "    (\n",
-    "        ew\n",
-    "        .write_df(tbl, title=\"Table 1: DataFrame\")\n",
+    "        ew.write_df(tbl, title=\"Table 1: DataFrame\")\n",
     "        .write_df(tbl_styled, title=\"Table 2: Styled DataFrame\", location=\"right\")\n",
     "        .write_fig(\n",
     "            fig,\n",
     "            title=\"Figure 0: Bar Plot\",\n",
     "        )\n",
     "        .auto_fit_column_width()\n",
-    "        \n",
     "        # new sheet\n",
     "        .switch_to_sheet(\"Part 2\", create_if_not_exists=True)\n",
     "        .write_df(tbl, title=\"Table 3: DataFrame\")\n",
