--- a/data/db_related/connectors.ipynb
+++ b/data/db_related/connectors.ipynb
@@ -580,7 +580,7 @@
     "\n",
     "eng.dialect.driver\n",
     "\n",
-    "eng.run(\"select * from dual\")\n"
+    "eng.run(\"select * from dual\")"
    ]
   },
   {
