--- a/data/db_related/db_interfaces/pg_inserter/test.ipynb
+++ b/data/db_related/db_interfaces/pg_inserter/test.ipynb
@@ -439,11 +439,11 @@
    ],
    "source": [
     "df = pd.read_csv(\"taxis.csv\")\n",
-    "df['pk'] = df.index\n",
-    "df['pickup'] = pd.to_datetime(df['pickup'])\n",
-    "df['pickup_dates'] = df['pickup'].dt.date\n",
-    "df['dropoff'] = pd.to_datetime(df['dropoff'])\n",
-    "df['passenger_is_1'] = df['passengers'] == 1\n",
+    "df[\"pk\"] = df.index\n",
+    "df[\"pickup\"] = pd.to_datetime(df[\"pickup\"])\n",
+    "df[\"pickup_dates\"] = df[\"pickup\"].dt.date\n",
+    "df[\"dropoff\"] = pd.to_datetime(df[\"dropoff\"])\n",
+    "df[\"passenger_is_1\"] = df[\"passengers\"] == 1\n",
     "df.head()"
    ]
   },
@@ -511,7 +511,7 @@
     "\"\"\"\n",
     "\n",
     "df = eng.run(qry)\n",
-    "assert len(df['pk'].unique()) == df.shape[0]"
+    "assert len(df[\"pk\"].unique()) == df.shape[0]"
    ]
   },
   {
@@ -565,7 +565,7 @@
     }
    ],
    "source": [
-    "def _parse_schema_table_name(sch_tbl_name:str) -> tuple[str, str]:\n",
+    "def _parse_schema_table_name(sch_tbl_name: str) -> tuple[str, str]:\n",
     "    \"\"\"\n",
     "    Examples::\n",
     "\n",
@@ -588,6 +588,7 @@
     "            schema_name = items[0]\n",
     "            table_name = \".\".join(items[1:n])\n",
     "    return schema_name, table_name\n",
+    "\n",
     "\n",
     "print(f\"{_parse_schema_table_name('ab') = }\")\n",
     "print(f\"{_parse_schema_table_name('Ab') = }\")\n",
@@ -648,13 +649,18 @@
     "    else:\n",
     "        return alc.String\n",
     "\n",
+    "\n",
     "lst = []\n",
     "for col in df.columns:\n",
     "    dtype = df[col].dtype\n",
     "    pg_dtype = _guess_pg_dtype(dtype)\n",
     "    lst.append((col, dtype, pg_dtype))\n",
     "\n",
-    "print(pd.DataFrame(lst, columns=[\"Column\", \"Pandas Dtype\", \"PostgreSQL Dtype\"]).to_string())"
+    "print(\n",
+    "    pd.DataFrame(\n",
+    "        lst, columns=[\"Column\", \"Pandas Dtype\", \"PostgreSQL Dtype\"]\n",
+    "    ).to_string()\n",
+    ")"
    ]
   },
   {
@@ -852,12 +858,14 @@
    "outputs": [],
    "source": [
     "# create table\n",
-    "df2:pd.DataFrame = df.copy()\n",
+    "df2: pd.DataFrame = df.copy()\n",
     "schema_table_name = \"test_schema.taxi\"\n",
     "eng = eng\n",
     "\n",
     "for col in df2.columns:\n",
-    "    assert col.islower() and '.' not in col, f\"Clean up col names: '{col}'. Need lower case and no '.'\"\n",
+    "    assert (\n",
+    "        col.islower() and \".\" not in col\n",
+    "    ), f\"Clean up col names: '{col}'. Need lower case and no '.'\"\n",
     "\n",
     "schema_name, table_name = _parse_schema_table_name(schema_table_name)\n",
     "meta = alc.MetaData(schema=schema_name)\n",
@@ -911,7 +919,7 @@
     }
    ],
    "source": [
-    "eng.run(\"select count(*) as n from test_schema.taxi\").iloc[0,0]"
+    "eng.run(\"select count(*) as n from test_schema.taxi\").iloc[0, 0]"
    ]
   },
   {
@@ -978,7 +986,7 @@
     }
    ],
    "source": [
-    "_['pickup_dates'].iloc[0]"
+    "_[\"pickup_dates\"].iloc[0]"
    ]
   },
   {
@@ -1055,7 +1063,7 @@
     }
    ],
    "source": [
-    "df3:pd.DataFrame = df.copy()\n",
+    "df3: pd.DataFrame = df.copy()\n",
     "df3.to_sql(\"taxi\", con=eng, schema=\"test_schema\", if_exists=\"replace\", index=False)"
    ]
   },
@@ -1095,8 +1103,10 @@
     }
    ],
    "source": [
-    "df.query(f\"pk <= 1000\").to_sql(\"taxi\", con=eng, schema=\"test_schema\", if_exists=\"replace\", index=False)\n",
-    "eng.run(\"select count(*) as n from test_schema.taxi\").iloc[0,0]"
+    "df.query(f\"pk <= 1000\").to_sql(\n",
+    "    \"taxi\", con=eng, schema=\"test_schema\", if_exists=\"replace\", index=False\n",
+    ")\n",
+    "eng.run(\"select count(*) as n from test_schema.taxi\").iloc[0, 0]"
    ]
   },
   {
@@ -1117,27 +1127,29 @@
     }
    ],
    "source": [
-    "df2:pd.DataFrame = df.query(f\"950 <= pk <= 2000\").copy()\n",
-    "pkeys:list = ['pk']\n",
+    "df2: pd.DataFrame = df.query(f\"950 <= pk <= 2000\").copy()\n",
+    "pkeys: list = [\"pk\"]\n",
     "where = f\"pk >= 900\"\n",
     "table_name = \"test_schema.taxi\"\n",
     "\n",
     "where_cls = f\"\\nwhere {where}\" if where else \"\"\n",
     "schema_name, table_name = _parse_schema_table_name(table_name)\n",
-    "db_tbl:pd.DataFrame = eng.run(f\"select {','.join(pkeys)} from {schema_name}.{table_name} {where_cls}\")\n",
+    "db_tbl: pd.DataFrame = eng.run(\n",
+    "    f\"select {','.join(pkeys)} from {schema_name}.{table_name} {where_cls}\"\n",
+    ")\n",
     "\n",
     "if not db_tbl.empty and not df2.empty:\n",
     "    dedup_tbl = (\n",
-    "        df2.merge(\n",
-    "            db_tbl, how=\"left\", on=pkeys, validate=\"one_to_one\", indicator=True\n",
-    "        )\n",
+    "        df2.merge(db_tbl, how=\"left\", on=pkeys, validate=\"one_to_one\", indicator=True)\n",
     "        .loc[lambda x: x._merge == \"left_only\", :]\n",
     "        .drop(columns=\"_merge\")\n",
     "    )\n",
     "else:\n",
     "    dedup_tbl = df2\n",
     "\n",
-    "dedup_tbl.to_sql(table_name, con=eng, schema=schema_name, if_exists=\"append\", index=False)"
+    "dedup_tbl.to_sql(\n",
+    "    table_name, con=eng, schema=schema_name, if_exists=\"append\", index=False\n",
+    ")"
    ]
   },
   {
@@ -1158,7 +1170,7 @@
     }
    ],
    "source": [
-    "eng.run(\"select count(*) as n from test_schema.taxi\").iloc[0,0]"
+    "eng.run(\"select count(*) as n from test_schema.taxi\").iloc[0, 0]"
    ]
   },
   {
