--- a/data/pandas_related/display/display.ipynb
+++ b/data/pandas_related/display/display.ipynb
@@ -149,12 +149,11 @@
     "import pandas as pd\n",
     "\n",
     "# Sample DataFrame\n",
-    "df = pd.DataFrame({\n",
-    "    'Math': [90, 80, 70],\n",
-    "    'Science': [85, 75, 65],\n",
-    "    'English': [88, 78, 68]\n",
-    "}, index=['Alice', 'Bob', 'Charlie'])\n",
-    "df\n"
+    "df = pd.DataFrame(\n",
+    "    {\"Math\": [90, 80, 70], \"Science\": [85, 75, 65], \"English\": [88, 78, 68]},\n",
+    "    index=[\"Alice\", \"Bob\", \"Charlie\"],\n",
+    ")\n",
+    "df"
    ]
   },
   {
@@ -220,13 +219,21 @@
     }
    ],
    "source": [
-    "styled_df = (\n",
-    "    df.style\n",
-    "    .set_table_styles([\n",
-    "        {'selector': 'th.col_heading', 'props': [('background-color', 'green'), ('color', 'black')]},  # Header\n",
-    "        {'selector': 'th.row_heading', 'props': [('background-color', 'lightblue'), ('color', 'black')]},   # Index\n",
-    "        {'selector': 'td', 'props': [('background-color', 'white'), ('color', 'black')]}               # Data\n",
-    "    ])\n",
+    "styled_df = df.style.set_table_styles(\n",
+    "    [\n",
+    "        {\n",
+    "            \"selector\": \"th.col_heading\",\n",
+    "            \"props\": [(\"background-color\", \"green\"), (\"color\", \"black\")],\n",
+    "        },  # Header\n",
+    "        {\n",
+    "            \"selector\": \"th.row_heading\",\n",
+    "            \"props\": [(\"background-color\", \"lightblue\"), (\"color\", \"black\")],\n",
+    "        },  # Index\n",
+    "        {\n",
+    "            \"selector\": \"td\",\n",
+    "            \"props\": [(\"background-color\", \"white\"), (\"color\", \"black\")],\n",
+    "        },  # Data\n",
+    "    ]\n",
     ")\n",
     "styled_df"
    ]
@@ -294,13 +301,19 @@
    ],
    "source": [
     "# Apply styling\n",
-    "styled_df = df.style\\\n",
-    "    .set_table_styles([\n",
-    "        {'selector': 'th.col_heading', 'props': [('background-color', '#d1e7dd'), ('color', 'black')]},  # Header\n",
-    "        {'selector': 'th.row_heading', 'props': [('background-color', '#f8d7da'), ('color', 'black')]},  # Index\n",
-    "        {'selector': 'td', 'props': [('background-color', '#fff3cd')]}  # Data cells\n",
-    "    ])\\\n",
-    "    .set_caption(\"🎨 Styled Student Scores\")\n",
+    "styled_df = df.style.set_table_styles(\n",
+    "    [\n",
+    "        {\n",
+    "            \"selector\": \"th.col_heading\",\n",
+    "            \"props\": [(\"background-color\", \"#d1e7dd\"), (\"color\", \"black\")],\n",
+    "        },  # Header\n",
+    "        {\n",
+    "            \"selector\": \"th.row_heading\",\n",
+    "            \"props\": [(\"background-color\", \"#f8d7da\"), (\"color\", \"black\")],\n",
+    "        },  # Index\n",
+    "        {\"selector\": \"td\", \"props\": [(\"background-color\", \"#fff3cd\")]},  # Data cells\n",
+    "    ]\n",
+    ").set_caption(\"🎨 Styled Student Scores\")\n",
     "\n",
     "styled_df"
    ]
@@ -641,7 +654,7 @@
     "pd.set_option(\"display.html.border\", 1)\n",
     "pd.set_option(\"display.large_repr\", \"truncate\")\n",
     "pd.set_option(\"display.expand_frame_repr\", False)\n",
-    "pd.set_option(\"display.max_seq_items\", 10)\n"
+    "pd.set_option(\"display.max_seq_items\", 10)"
    ]
   },
   {
@@ -657,10 +670,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# display table as html\n",
     "df = pd.DataFrame({\"a\": [1, 2, 3], \"b\": [4, 5, 6]})\n",
-    "df.to_html(\"test.html\")\n"
+    "df.to_html(\"test.html\")"
    ]
   },
   {
@@ -669,10 +681,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# display table as html with css\n",
     "df = pd.DataFrame({\"a\": [1, 2, 3], \"b\": [4, 5, 6]})\n",
-    "df.to_html(\"test.html\", classes=\"table table-striped table-hover\")\n"
+    "df.to_html(\"test.html\", classes=\"table table-striped table-hover\")"
    ]
   },
   {
@@ -711,7 +722,7 @@
     "\n",
     "# save html\n",
     "with open(\"test.html\", \"w\") as f:\n",
-    "    f.write(html)\n"
+    "    f.write(html)"
    ]
   },
   {
