--- a/generics/introspection.ipynb
+++ b/generics/introspection.ipynb
@@ -23,8 +23,8 @@
     "import inspect\n",
     "\n",
     "# Sample DataFrame\n",
-    "df = pd.DataFrame({'A': np.random.randint(1, 10, 100), 'B': np.random.rand(100)})\n",
-    "df.shape\n"
+    "df = pd.DataFrame({\"A\": np.random.randint(1, 10, 100), \"B\": np.random.rand(100)})\n",
+    "df.shape"
    ]
   },
   {
@@ -42,12 +42,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def masks_dict_to_df_for_display(masks:dict) -> pd.DataFrame:\n",
+    "def masks_dict_to_df_for_display(masks: dict) -> pd.DataFrame:\n",
     "    res = dict()\n",
     "    for name, mask in masks.items():\n",
     "        res[name] = inspect.getsource(mask).strip()\n",
     "\n",
-    "    return pd.DataFrame.from_dict(res, orient='index', columns=['source']).reset_index()"
+    "    return pd.DataFrame.from_dict(res, orient=\"index\", columns=[\"source\"]).reset_index()"
    ]
   },
   {
@@ -65,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask1 = lambda x: x['A'] > 2\n",
-    "mask_fn = lambda x: mask1(x) & (x['A'] < 5)\n",
+    "mask1 = lambda x: x[\"A\"] > 2\n",
+    "mask_fn = lambda x: mask1(x) & (x[\"A\"] < 5)\n",
     "mask_fn2 = mask_fn"
    ]
   },
@@ -103,11 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "masks = {\n",
-    "    'mask1': mask1,\n",
-    "    'mask_fn': mask_fn,\n",
-    "    'mask_fn2': mask_fn2\n",
-    "}"
+    "masks = {\"mask1\": mask1, \"mask_fn\": mask_fn, \"mask_fn2\": mask_fn2}"
    ]
   },
   {
