--- a/generics/shell/asyncio_subprocess.ipynb
+++ b/generics/shell/asyncio_subprocess.ipynb
@@ -18,6 +18,7 @@
     "import asyncio\n",
     "import datetime\n",
     "\n",
+    "\n",
     "async def run(cmd):\n",
     "    proc = await asyncio.create_subprocess_shell(\n",
     "        cmd, stdout=asyncio.subprocess.PIPE, stderr=asyncio.subprocess.PIPE\n",
@@ -29,8 +30,7 @@
     "    if stdout:\n",
     "        print(f\"[stdout]\\n{stdout.decode()}\")\n",
     "    if stderr:\n",
-    "        print(f\"[stderr]\\n{stderr.decode()}\")\n",
-    "\n"
+    "        print(f\"[stderr]\\n{stderr.decode()}\")"
    ]
   },
   {
@@ -63,8 +63,9 @@
     "    await asyncio.gather(\n",
     "        run('sleep 1; echo \"hello\"'),\n",
     "        run('sleep 2; echo \"hello 2\"'),\n",
-    "        run('sleep 3; echo \"hello 3\"')\n",
+    "        run('sleep 3; echo \"hello 3\"'),\n",
     "    )\n",
+    "\n",
     "\n",
     "await main()"
    ]
@@ -92,26 +93,27 @@
     }
    ],
    "source": [
-    "\n",
     "import asyncio\n",
     "import sys\n",
     "\n",
+    "\n",
     "async def get_date():\n",
-    "    code = 'import datetime; print(datetime.datetime.now())'\n",
+    "    code = \"import datetime; print(datetime.datetime.now())\"\n",
     "\n",
     "    # Create the subprocess; redirect the standard output\n",
     "    # into a pipe.\n",
     "    proc = await asyncio.create_subprocess_exec(\n",
-    "        sys.executable, '-c', code,\n",
-    "        stdout=asyncio.subprocess.PIPE)\n",
+    "        sys.executable, \"-c\", code, stdout=asyncio.subprocess.PIPE\n",
+    "    )\n",
     "\n",
     "    # Read one line of output.\n",
     "    data = await proc.stdout.readline()\n",
-    "    line = data.decode('ascii').rstrip()\n",
+    "    line = data.decode(\"ascii\").rstrip()\n",
     "\n",
     "    # Wait for the subprocess exit.\n",
     "    await proc.wait()\n",
     "    return line\n",
+    "\n",
     "\n",
     "date = await get_date()\n",
     "print(f\"Current date: {date}\")"
