--- a/math_scripts/stats/ttest.ipynb
+++ b/math_scripts/stats/ttest.ipynb
@@ -408,10 +408,7 @@
     "arr2 = df.loc[lambda x: x[\"who\"] == \"child\", \"survived\"].values\n",
     "\n",
     "t_stat_welch, p_val_welch = ttest_ind(\n",
-    "    arr1, \n",
-    "    arr2, \n",
-    "    alternative=\"two-sided\", \n",
-    "    equal_var=False\n",
+    "    arr1, arr2, alternative=\"two-sided\", equal_var=False\n",
     ")\n",
     "print(f\"t={t_stat_welch:.3f}, p={p_val_welch:.3f}\")"
    ]
