--- a/model/logistic/eg.ipynb
+++ b/model/logistic/eg.ipynb
@@ -32,7 +32,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('titanic.csv')\n",
+    "df = pd.read_csv(\"titanic.csv\")\n",
     "df.shape"
    ]
   },
@@ -236,7 +236,7 @@
     "    grouped[\"woe\"] = np.log((dist_good + 1e-6) / (dist_bad + 1e-6))  # smoothing\n",
     "    grouped[\"iv\"] = (dist_good - dist_bad) * grouped[\"woe\"]\n",
     "    iv = grouped[\"iv\"].sum()\n",
-    "    return grouped[[\"woe\"]], iv, grouped\n"
+    "    return grouped[[\"woe\"]], iv, grouped"
    ]
   },
   {
@@ -255,11 +255,11 @@
     }
    ],
    "source": [
-    "col = 'who'\n",
+    "col = \"who\"\n",
     "woe_table_who, iv, grouped = woe_iv(df, col, \"survived\")\n",
     "print(f\"{col} IV: {iv:.4f}\")\n",
     "\n",
-    "col = 'class'\n",
+    "col = \"class\"\n",
     "woe_table2_class, iv, grouped = woe_iv(df, col, \"survived\")\n",
     "print(f\"{col} IV: {iv:.4f}\")"
    ]
