--- a/plot/plotting/addon_tick_locator_formatter.ipynb
+++ b/plot/plotting/addon_tick_locator_formatter.ipynb
@@ -62,7 +62,7 @@
     "ax.set_xticks(xticks)\n",
     "ax.set_xticks(np.arange(-0.5, len(xticks), 1), minor=True)\n",
     "ax.set_xticklabels(xticklabels)\n",
-    "ax.set_xlabel(xlabel)\n"
+    "ax.set_xlabel(xlabel)"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "source": [
     "x = pdf[\"age_bin\"].astype(str)\n",
     "ax.set_xticks(range(len(x)))\n",
-    "ax.set_xticklabels(x, rotation=45, ha=\"right\")\n"
+    "ax.set_xticklabels(x, rotation=45, ha=\"right\")"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "ax.yaxis.set_major_locator(mpl.ticker.MaxNLocator(nbins=5))\n",
-    "ax.yaxis.set_major_formatter(mpl.ticker.PercentFormatter(1.0, decimals=0))\n"
+    "ax.yaxis.set_major_formatter(mpl.ticker.PercentFormatter(1.0, decimals=0))"
    ]
   },
   {
@@ -172,7 +172,7 @@
     "#                 va=\"center\" if s_values is None else \"bottom\",\n",
     "#                 color=text_color,\n",
     "#                 fontsize=n_fontsize,\n",
-    "# )\n"
+    "# )"
    ]
   },
   {
