--- a/plot/plotting/content_bars.ipynb
+++ b/plot/plotting/content_bars.ipynb
@@ -73,7 +73,12 @@
     "    \"survival_rate\": (\"survived\", \"mean\"),\n",
     "}\n",
     "for who in df[\"who\"].unique():\n",
-    "    grp_dict[f\"survival_rate_{who}\"] = ('survived', lambda x, w=who: df.loc[x.index].loc[lambda y:y['who']==w,'survived'].mean())\n",
+    "    grp_dict[f\"survival_rate_{who}\"] = (\n",
+    "        \"survived\",\n",
+    "        lambda x, w=who: df.loc[x.index]\n",
+    "        .loc[lambda y: y[\"who\"] == w, \"survived\"]\n",
+    "        .mean(),\n",
+    "    )\n",
     "\n",
     "pdf = df.groupby(\"age_bin\", observed=False, as_index=False).agg(**grp_dict)\n",
     "print(pdf.head().to_string())"
