--- a/plot/plotting/content_lines.ipynb
+++ b/plot/plotting/content_lines.ipynb
@@ -66,7 +66,7 @@
     "ts[\"n_lag12\"] = ts[\"n\"].shift(12)\n",
     "ts[\"ma12\"] = ta.trend.sma_indicator(ts[\"n\"], window=12, fillna=True)\n",
     "\n",
-    "ts.drop(columns=['year',\"month\"], inplace=True)\n",
+    "ts.drop(columns=[\"year\", \"month\"], inplace=True)\n",
     "\n",
     "print(ts.head().to_string())\n",
     "ts.shape"
@@ -93,13 +93,23 @@
     }
    ],
    "source": [
-    "ts_g = ts.assign(year = lambda x:x[\"date\"].dt.year).groupby([\"year\"], dropna=False, observed=False).agg(\n",
-    "    **{\n",
-    "        \"max_n\": (\"n\", \"max\"),\n",
-    "        \"max_n_date\": (\"n\", lambda x: ts.loc[ts.loc[x.index, \"n\"].idxmax(), \"date\"]),\n",
-    "        \"min_n\": (\"n\", \"min\"),\n",
-    "        \"min_n_date\": (\"n\", lambda x: ts.loc[ts.loc[x.index, \"n\"].idxmin(), \"date\"]),\n",
-    "    }\n",
+    "ts_g = (\n",
+    "    ts.assign(year=lambda x: x[\"date\"].dt.year)\n",
+    "    .groupby([\"year\"], dropna=False, observed=False)\n",
+    "    .agg(\n",
+    "        **{\n",
+    "            \"max_n\": (\"n\", \"max\"),\n",
+    "            \"max_n_date\": (\n",
+    "                \"n\",\n",
+    "                lambda x: ts.loc[ts.loc[x.index, \"n\"].idxmax(), \"date\"],\n",
+    "            ),\n",
+    "            \"min_n\": (\"n\", \"min\"),\n",
+    "            \"min_n_date\": (\n",
+    "                \"n\",\n",
+    "                lambda x: ts.loc[ts.loc[x.index, \"n\"].idxmin(), \"date\"],\n",
+    "            ),\n",
+    "        }\n",
+    "    )\n",
     ")\n",
     "print(ts_g.head().to_string())"
    ]
@@ -141,9 +151,7 @@
    ],
    "source": [
     "fig, ax = plt.subplots(figsize=(12, 6))\n",
-    "ax.plot(\n",
-    "    ts[\"date\"], ts[\"n\"]\n",
-    ")"
+    "ax.plot(ts[\"date\"], ts[\"n\"])"
    ]
   },
   {
