--- a/plot/plotting/content_side_by_side_bars.ipynb
+++ b/plot/plotting/content_side_by_side_bars.ipynb
@@ -94,7 +94,12 @@
     "    \"survival_rate\": (\"survived\", \"mean\"),\n",
     "}\n",
     "for who in df[\"who\"].unique():\n",
-    "    grp_dict[f\"survival_rate_{who}\"] = ('survived', lambda x, w=who: df.loc[x.index].loc[lambda y:y['who']==w,'survived'].mean())\n",
+    "    grp_dict[f\"survival_rate_{who}\"] = (\n",
+    "        \"survived\",\n",
+    "        lambda x, w=who: df.loc[x.index]\n",
+    "        .loc[lambda y: y[\"who\"] == w, \"survived\"]\n",
+    "        .mean(),\n",
+    "    )\n",
     "\n",
     "pdf = df.groupby(\"age_bin\", observed=False, as_index=False).agg(**grp_dict)\n",
     "print(pdf.head().to_string())"
@@ -132,14 +137,14 @@
     "width = 0.35\n",
     "\n",
     "ax.bar(\n",
-    "    x - width/2,\n",
+    "    x - width / 2,\n",
     "    pdf[\"survival_rate_man\"],\n",
     "    width=width,\n",
     "    alpha=0.8,\n",
     "    label=\"Survival Rate 1\",\n",
     ")\n",
     "ax.bar(\n",
-    "    x + width/2,\n",
+    "    x + width / 2,\n",
     "    pdf[\"survival_rate_woman\"],\n",
     "    width=width,\n",
     "    alpha=0.8,\n",
@@ -179,7 +184,9 @@
     "\n",
     "x_ticks = np.arange(pdf.shape[0])\n",
     "x_ticklabels = pdf[\"age_bin\"].astype(str)\n",
-    "y_data = pdf[[\"survival_rate\", \"survival_rate_man\", \"survival_rate_woman\", \"survival_rate_child\"]]\n",
+    "y_data = pdf[\n",
+    "    [\"survival_rate\", \"survival_rate_man\", \"survival_rate_woman\", \"survival_rate_child\"]\n",
+    "]\n",
     "\n",
     "plot_n_side_by_side_bars(ax, x_ticks, y_data)\n",
     "_ = ax.set_xticks(x_ticks, labels=x_ticklabels, rotation=45)"
