--- a/plot/plotting/content_stackplot.ipynb
+++ b/plot/plotting/content_stackplot.ipynb
@@ -39,13 +39,20 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('data/taxis.csv')\n",
+    "df = pd.read_csv(\"data/taxis.csv\")\n",
     "\n",
-    "df['pickup_date'] = df['pickup'].astype('datetime64[ns]').dt.date\n",
+    "df[\"pickup_date\"] = df[\"pickup\"].astype(\"datetime64[ns]\").dt.date\n",
     "# print(f\"{df['pickup_date'].dtype = }\")\n",
     "# df['pickup_date']\n",
     "\n",
-    "tdf = df.groupby([\"pickup_date\", \"pickup_borough\"], dropna=False, observed=False)['pickup_date'].count().unstack().fillna(0)\n",
+    "tdf = (\n",
+    "    df.groupby([\"pickup_date\", \"pickup_borough\"], dropna=False, observed=False)[\n",
+    "        \"pickup_date\"\n",
+    "    ]\n",
+    "    .count()\n",
+    "    .unstack()\n",
+    "    .fillna(0)\n",
+    ")\n",
     "tdf.columns = tdf.columns.astype(str).str.lower()\n",
     "print(tdf.head().to_string())"
    ]
@@ -100,8 +107,10 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "\n",
-    "ax.stackplot(tdf_pct.index, *[tdf_pct[arg] for arg in tdf_pct.columns], labels=tdf_pct.columns)\n",
-    "_ = ax.set_xticks(tdf_pct.index[::7], labels = tdf_pct.index[::7], rotation=45)"
+    "ax.stackplot(\n",
+    "    tdf_pct.index, *[tdf_pct[arg] for arg in tdf_pct.columns], labels=tdf_pct.columns\n",
+    ")\n",
+    "_ = ax.set_xticks(tdf_pct.index[::7], labels=tdf_pct.index[::7], rotation=45)"
    ]
   },
   {
