--- a/plot/plotting/content_transition_matrix.ipynb
+++ b/plot/plotting/content_transition_matrix.ipynb
@@ -82,16 +82,22 @@
     "def get_data(df, hour_braket_size=6):\n",
     "    df2 = df.copy()\n",
     "    col_from, col_to = \"pickup\", \"dropoff\"\n",
-    "    assert col_from in df2.columns and col_to in df2.columns, f\"columns {col_from} and {col_to} must be in dataframe\"\n",
+    "    assert (\n",
+    "        col_from in df2.columns and col_to in df2.columns\n",
+    "    ), f\"columns {col_from} and {col_to} must be in dataframe\"\n",
     "    import random\n",
+    "\n",
     "    df2.loc[random.choices(df2.index, k=10), col_from] = np.nan\n",
     "    df2.loc[random.choices(df2.index, k=10), col_to] = np.nan\n",
-    "    df2[f'{col_from}_braket'] = pd.to_datetime(df2[col_from]).dt.hour // hour_braket_size\n",
-    "    df2[f'{col_to}_braket'] = pd.to_datetime(df2[col_to]).dt.hour // hour_braket_size\n",
+    "    df2[f\"{col_from}_braket\"] = (\n",
+    "        pd.to_datetime(df2[col_from]).dt.hour // hour_braket_size\n",
+    "    )\n",
+    "    df2[f\"{col_to}_braket\"] = pd.to_datetime(df2[col_to]).dt.hour // hour_braket_size\n",
     "\n",
-    "    df2 = df2[[f\"{col_from}_braket\", f\"{col_to}_braket\", 'tip', 'fare']]\n",
+    "    df2 = df2[[f\"{col_from}_braket\", f\"{col_to}_braket\", \"tip\", \"fare\"]]\n",
     "\n",
     "    return df2\n",
+    "\n",
     "\n",
     "df2 = get_data(df, hour_braket_size=3)\n",
     "print(df2.head().to_string())"
@@ -108,19 +114,22 @@
     "def calc_signal(df):\n",
     "\n",
     "    col_from, col_to = \"pickup_braket\", \"dropoff_braket\"\n",
-    "    assert col_from in df.columns and col_to in df.columns, f\"columns {col_from} and {col_to} must be in dataframe\"\n",
+    "    assert (\n",
+    "        col_from in df.columns and col_to in df.columns\n",
+    "    ), f\"columns {col_from} and {col_to} must be in dataframe\"\n",
     "\n",
-    "    gdf = (\n",
-    "        df\n",
-    "        .groupby([col_from, col_to], dropna=False, observed=False, as_index=False)\n",
-    "        .agg(\n",
-    "            **{\n",
-    "                \"n\": (col_from, \"size\"),\n",
-    "                'signal': (col_from, lambda x: df.loc[x.index, 'tip'].sum()/df.loc[x.index, 'fare'].sum()),\n",
-    "            }\n",
-    "        )\n",
+    "    gdf = df.groupby(\n",
+    "        [col_from, col_to], dropna=False, observed=False, as_index=False\n",
+    "    ).agg(\n",
+    "        **{\n",
+    "            \"n\": (col_from, \"size\"),\n",
+    "            \"signal\": (\n",
+    "                col_from,\n",
+    "                lambda x: df.loc[x.index, \"tip\"].sum() / df.loc[x.index, \"fare\"].sum(),\n",
+    "            ),\n",
+    "        }\n",
     "    )\n",
-    "    return gdf\n"
+    "    return gdf"
    ]
   },
   {
@@ -184,18 +193,28 @@
     "lsdf = spine.merge(lsdf, on=[from_col, to_col], how=\"left\")\n",
     "pdf = lsdf.pivot(index=from_col, columns=to_col)\n",
     "\n",
-    "pdf_n = pdf.xs('n', axis=1, level=0).sort_index(axis=0,ascending=False,na_position='first').sort_index(axis=1).fillna(0)\n",
-    "pdf_sig = pdf.xs('signal', axis=1, level=0).sort_index(axis=0,ascending=False,na_position='first').sort_index(axis=1).fillna(0)\n",
+    "pdf_n = (\n",
+    "    pdf.xs(\"n\", axis=1, level=0)\n",
+    "    .sort_index(axis=0, ascending=False, na_position=\"first\")\n",
+    "    .sort_index(axis=1)\n",
+    "    .fillna(0)\n",
+    ")\n",
+    "pdf_sig = (\n",
+    "    pdf.xs(\"signal\", axis=1, level=0)\n",
+    "    .sort_index(axis=0, ascending=False, na_position=\"first\")\n",
+    "    .sort_index(axis=1)\n",
+    "    .fillna(0)\n",
+    ")\n",
     "\n",
     "plot_transition_matrix(\n",
-    "    pdf_n = pdf_n,\n",
-    "    pdf_s = pdf_sig,\n",
-    "    n_fontsize = 7,\n",
-    "    s_fontsize = 7,\n",
+    "    pdf_n=pdf_n,\n",
+    "    pdf_s=pdf_sig,\n",
+    "    n_fontsize=7,\n",
+    "    s_fontsize=7,\n",
     "    figsize=(8, 8),\n",
-    "    title = \"Transition Matrix\",\n",
+    "    title=\"Transition Matrix\",\n",
     "    colorbar_label=\"Signal (Tip/Fare)\",\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -235,15 +254,20 @@
     "lsdf = spine.merge(lsdf, on=[from_col, to_col], how=\"left\")\n",
     "pdf = lsdf.pivot(index=from_col, columns=to_col)\n",
     "\n",
-    "pdf_n = pdf.xs('n', axis=1, level=0).sort_index(axis=0,ascending=False,na_position='first').sort_index(axis=1).fillna(0)\n",
+    "pdf_n = (\n",
+    "    pdf.xs(\"n\", axis=1, level=0)\n",
+    "    .sort_index(axis=0, ascending=False, na_position=\"first\")\n",
+    "    .sort_index(axis=1)\n",
+    "    .fillna(0)\n",
+    ")\n",
     "\n",
     "plot_transition_matrix(\n",
-    "    pdf_n = pdf_n,\n",
-    "    n_fontsize = 7,\n",
-    "    s_fontsize = 7,\n",
+    "    pdf_n=pdf_n,\n",
+    "    n_fontsize=7,\n",
+    "    s_fontsize=7,\n",
     "    figsize=(8, 8),\n",
-    "    title = \"Transition Matrix\",\n",
-    ")\n"
+    "    title=\"Transition Matrix\",\n",
+    ")"
    ]
   },
   {
@@ -283,17 +307,21 @@
     "lsdf = spine.merge(lsdf, on=[from_col, to_col], how=\"left\")\n",
     "pdf = lsdf.pivot(index=from_col, columns=to_col)\n",
     "\n",
-    "pdf_n = pdf.xs('n', axis=1, level=0)\n",
-    "new_index = list(range(0,10)) + [np.nan]\n",
+    "pdf_n = pdf.xs(\"n\", axis=1, level=0)\n",
+    "new_index = list(range(0, 10)) + [np.nan]\n",
     "pdf_n = pdf_n.reindex(index=new_index, columns=new_index, fill_value=0)\n",
-    "pdf_n = pdf_n.sort_index(axis=0,ascending=False,na_position='first').sort_index(axis=1).fillna(0)\n",
+    "pdf_n = (\n",
+    "    pdf_n.sort_index(axis=0, ascending=False, na_position=\"first\")\n",
+    "    .sort_index(axis=1)\n",
+    "    .fillna(0)\n",
+    ")\n",
     "plot_transition_matrix(\n",
-    "    pdf_n = pdf_n,\n",
-    "    n_fontsize = 7,\n",
-    "    s_fontsize = 7,\n",
+    "    pdf_n=pdf_n,\n",
+    "    n_fontsize=7,\n",
+    "    s_fontsize=7,\n",
     "    figsize=(8, 8),\n",
-    "    title = \"Transition Matrix\",\n",
-    ")\n"
+    "    title=\"Transition Matrix\",\n",
+    ")"
    ]
   },
   {
@@ -328,24 +356,24 @@
    "source": [
     "lsdf = calc_signal(df2)\n",
     "\n",
-    "_ = list(range(0,10)) + [np.nan]\n",
+    "_ = list(range(0, 10)) + [np.nan]\n",
     "pdf_n, pdf_s = calc_transition_matrixes_from_signal_with_level_alignment(\n",
-    "    signal_df = lsdf,\n",
-    "    from_col = \"pickup_braket\",\n",
-    "    to_col = \"dropoff_braket\",\n",
+    "    signal_df=lsdf,\n",
+    "    from_col=\"pickup_braket\",\n",
+    "    to_col=\"dropoff_braket\",\n",
     "    n_col=\"n\",\n",
     "    signal_col=\"signal\",\n",
-    "    from_levels = _,\n",
-    "    to_levels = _,\n",
+    "    from_levels=_,\n",
+    "    to_levels=_,\n",
     ")\n",
     "\n",
     "plot_transition_matrix(\n",
-    "    pdf_n = pdf_n,\n",
-    "    pdf_s = pdf_s,\n",
-    "    n_fontsize = 7,\n",
-    "    s_fontsize = 7,\n",
+    "    pdf_n=pdf_n,\n",
+    "    pdf_s=pdf_s,\n",
+    "    n_fontsize=7,\n",
+    "    s_fontsize=7,\n",
     "    figsize=(8, 8),\n",
-    "    title = \"Transition Matrix\",\n",
+    "    title=\"Transition Matrix\",\n",
     "    colorbar_label=\"Signal (Tip/Fare)\",\n",
     ")"
    ]
@@ -383,20 +411,20 @@
     "lsdf = calc_signal(df2)\n",
     "\n",
     "pdf_n, pdf_s = calc_transition_matrixes_from_signal_with_level_alignment(\n",
-    "    signal_df = lsdf,\n",
-    "    from_col = \"pickup_braket\",\n",
-    "    to_col = \"dropoff_braket\",\n",
+    "    signal_df=lsdf,\n",
+    "    from_col=\"pickup_braket\",\n",
+    "    to_col=\"dropoff_braket\",\n",
     "    n_col=\"n\",\n",
     "    signal_col=\"signal\",\n",
     ")\n",
     "\n",
     "plot_transition_matrix(\n",
-    "    pdf_n = pdf_n,\n",
-    "    pdf_s = pdf_s,\n",
-    "    n_fontsize = 7,\n",
-    "    s_fontsize = 7,\n",
+    "    pdf_n=pdf_n,\n",
+    "    pdf_s=pdf_s,\n",
+    "    n_fontsize=7,\n",
+    "    s_fontsize=7,\n",
     "    figsize=(8, 8),\n",
-    "    title = \"Transition Matrix\",\n",
+    "    title=\"Transition Matrix\",\n",
     "    colorbar_label=\"Signal (Tip/Fare)\",\n",
     ")"
    ]
@@ -474,7 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "#"
    ]
   }
  ],
