--- a/data/analysis/05_flags.ipynb
+++ b/data/analysis/05_flags.ipynb
@@ -34,6 +34,7 @@
    "source": [
     "from enum import IntFlag\n",
     "\n",
+    "\n",
     "def decode_flags(bitfield: int, flags: IntFlag) -> list[str]:\n",
     "    return [name for name, value in flags.__members__.items() if bitfield & value]"
    ]
@@ -191,7 +192,7 @@
     }
    ],
    "source": [
-    "bin(~0b0101)# display as negative binary"
+    "bin(~0b0101)  # display as negative binary"
    ]
   },
   {
@@ -369,11 +370,13 @@
     "# define mapping\n",
     "from enum import IntFlag\n",
     "\n",
+    "\n",
     "class Flags(IntFlag):\n",
     "    HAS_SURVIVED = 1 << 0\n",
     "    IS_ALONE = 1 << 1\n",
     "    IS_MALE = 1 << 2\n",
     "    AGE_BELOW_18 = 1 << 3\n",
+    "\n",
     "\n",
     "for flag in Flags:\n",
     "    print(f\"{flag.name}: {flag.value}\")"
@@ -558,10 +561,10 @@
    "outputs": [],
    "source": [
     "# check\n",
-    "df['has_survived'] = df[\"survived\"]\n",
-    "df['is_alone'] = df[\"alone\"]\n",
-    "df['is_male'] = df[\"sex\"].map({\"male\": 1, \"female\": 0})\n",
-    "df['age_below_18'] = df[\"age\"].lt(18)"
+    "df[\"has_survived\"] = df[\"survived\"]\n",
+    "df[\"is_alone\"] = df[\"alone\"]\n",
+    "df[\"is_male\"] = df[\"sex\"].map({\"male\": 1, \"female\": 0})\n",
+    "df[\"age_below_18\"] = df[\"age\"].lt(18)"
    ]
   },
   {
@@ -933,7 +936,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = df.loc[lambda x: x['has_survived'] == 1,:].shape\n",
+    "res = df.loc[lambda x: x[\"has_survived\"] == 1, :].shape\n",
     "res3 = df.loc[lambda x: x[\"flags\"] & int(Flags.HAS_SURVIVED) > 0, :].shape\n",
     "assert res == res3"
    ]
@@ -944,12 +947,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = df.loc[lambda x:(x['has_survived'] == 1) & (x['is_male'] == 1),:].shape\n",
+    "res = df.loc[lambda x: (x[\"has_survived\"] == 1) & (x[\"is_male\"] == 1), :].shape\n",
     "res2 = df.loc[\n",
-    "    lambda x: x[\"flags\"] & int(Flags.HAS_SURVIVED | Flags.IS_MALE) == Flags.HAS_SURVIVED | Flags.IS_MALE,\n",
+    "    lambda x: x[\"flags\"] & int(Flags.HAS_SURVIVED | Flags.IS_MALE)\n",
+    "    == Flags.HAS_SURVIVED | Flags.IS_MALE,\n",
     "    :,\n",
     "].shape\n",
-    "assert (res == res2)"
+    "assert res == res2"
    ]
   },
   {
@@ -963,7 +967,7 @@
     "    lambda x: x[\"flags\"] & int(Flags.HAS_SURVIVED | Flags.IS_MALE) > 0,\n",
     "    :,\n",
     "].shape\n",
-    "assert (res == res3)"
+    "assert res == res3"
    ]
   },
   {
@@ -974,7 +978,7 @@
    "source": [
     "res = df.loc[lambda x: (x[\"has_survived\"] == 0), :].shape\n",
     "res3 = df.loc[lambda x: x[\"flags\"] & int(Flags.HAS_SURVIVED) == 0, :].shape\n",
-    "assert (res == res3)"
+    "assert res == res3"
    ]
   },
   {
@@ -1344,13 +1348,15 @@
     "import pandas as pd\n",
     "\n",
     "# Sample data\n",
-    "df = pd.DataFrame({'transition': [123, 321, 456, 654, 111]})\n",
+    "df = pd.DataFrame({\"transition\": [123, 321, 456, 654, 111]})\n",
     "\n",
     "# Parameters\n",
     "stage = 1  # e.g. extract the second stage from the right (stage 1)\n",
     "\n",
     "# Extract stage using string slicing\n",
-    "df[f'stage_{stage}'] = df['transition'].astype(str).str.zfill(stage + 1).str[::-1].str[stage].astype(int)\n",
+    "df[f\"stage_{stage}\"] = (\n",
+    "    df[\"transition\"].astype(str).str.zfill(stage + 1).str[::-1].str[stage].astype(int)\n",
+    ")\n",
     "\n",
     "df.head()"
    ]
@@ -1484,12 +1490,13 @@
     "# 1 bitfield to represent stages of cats\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.DataFrame({'transition': [243, 321, 456, 654, 111]})\n",
-    "max_stages = df['transition'].astype(str).str.len().max()\n",
+    "df = pd.DataFrame({\"transition\": [243, 321, 456, 654, 111]})\n",
+    "max_stages = df[\"transition\"].astype(str).str.len().max()\n",
     "bits_per_stage = 4  # supports up to 16 categories per stage\n",
     "\n",
     "# Extract digits per stage\n",
-    "digits = df['transition'].astype(str).str.zfill(max_stages).str[::-1].apply(list)\n",
+    "digits = df[\"transition\"].astype(str).str.zfill(max_stages).str[::-1].apply(list)\n",
+    "\n",
     "\n",
     "def encode_composite_mask(digits, bits_per_stage):\n",
     "    mask = 0\n",
@@ -1497,7 +1504,8 @@
     "        mask |= (1 << int(d)) << (bits_per_stage * i)\n",
     "    return mask\n",
     "\n",
-    "df['composite_mask'] = digits.apply(lambda x: encode_composite_mask(x, bits_per_stage))\n",
+    "\n",
+    "df[\"composite_mask\"] = digits.apply(lambda x: encode_composite_mask(x, bits_per_stage))\n",
     "df.head()"
    ]
   },
@@ -1609,12 +1617,12 @@
     "stage = 1\n",
     "category = 4\n",
     "bit = (1 << category) << (bits_per_stage * stage)\n",
-    "df[df['composite_mask'] & bit > 0]\n",
+    "df[df[\"composite_mask\"] & bit > 0]\n",
     "\n",
     "# Check if stage 0 has category 3 or 6\n",
     "stage = 0\n",
     "bit = ((1 << 3) | (1 << 6)) << (bits_per_stage * stage)\n",
-    "df[df['composite_mask'] & bit > 0]"
+    "df[df[\"composite_mask\"] & bit > 0]"
    ]
   }
  ],
